# todo-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
todo_list/: cli.py  manage_tasks.py  utils.py
