[project]
name= "todolist"
version="0.1.0"
description="A simple command line to-do list manager"
authors= [
    {name="Sara", email="sara.metalli@gmail.com"}
]

dependencies = []
requires-python= ">=3.7"

[project.scripts]
todolist = "todo_list.cli:main"

[build-system]
requires=["setuptools"]
build-backend= "setuptools.build_meta"